{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 97,
  "lineage": "a75bfd1b-fe67-58b4-d3b6-200a11440530",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:708113109960:vpc/vpc-0f2cdbc6a33637627",
            "cidr_block": "15.9.97.0/24",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0e8cf1467aa7b0954",
                "cidr_block": "15.9.97.0/24",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0e2f66217ab8d5ccf",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "KofraVPC"
                ]
              }
            ],
            "id": "vpc-0f2cdbc6a33637627",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09d69ff5a337b3d10",
            "owner_id": "708113109960",
            "tags": {
              "Name": "KofraVPC",
              "vpc-id": "kofra_vpc_01"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f81732f07ce19b1c",
            "arn": "arn:aws:ec2:us-east-1:708113109960:instance/i-067f66fed6cf046fc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-067f66fed6cf046fc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "kofra-vm-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03d653208ca2742a3",
            "private_dns": "ip-15-9-97-13.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "15.9.97.13",
            "public_ip": "44.200.15.250",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ee9fb5d12e6cd052",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-06eb18d4d4e37bf62",
            "tags": {
              "Name": "kofra_vm"
            },
            "tags_all": {
              "Name": "kofra_vm"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0aaaec94e5e636f40"
            ]
          },
          "dependencies": [
            "aws_security_group.web_server_security_group",
            "aws_subnet.public",
            "data.aws_ami.ami",
            "data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "kofra_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:708113109960:internet-gateway/igw-059a08382ead6925a",
            "id": "igw-059a08382ead6925a",
            "owner_id": "708113109960",
            "tags": {
              "Name": "kofra-internet-gw"
            },
            "tags_all": {
              "Name": "kofra-internet-gw"
            },
            "vpc_id": "vpc-0f2cdbc6a33637627"
          },
          "dependencies": [
            "data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:708113109960:route-table/rtb-0b9e6d3226d931715",
            "id": "rtb-0b9e6d3226d931715",
            "owner_id": "708113109960",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-059a08382ead6925a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kofra-route-table"
            },
            "tags_all": {
              "Name": "kofra-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f2cdbc6a33637627"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.kofra_gw",
            "data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0931cd3c96bd5bef0",
            "route_table_id": "rtb-0b9e6d3226d931715",
            "subnet_id": "subnet-06eb18d4d4e37bf62"
          },
          "dependencies": [
            "aws_internet_gateway.kofra_gw",
            "aws_route_table.route_table",
            "aws_subnet.public",
            "data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_server_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:708113109960:security-group/sg-0aaaec94e5e636f40",
            "description": "Allow SSH inbound  and outbound traffic",
            "egress": [],
            "id": "sg-0aaaec94e5e636f40",
            "ingress": [],
            "name": "kofra-ssh-security-group",
            "name_prefix": "",
            "owner_id": "708113109960",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kofra_allow_ssh"
            },
            "tags_all": {
              "Name": "kofra_allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f2cdbc6a33637627"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:708113109960:subnet/subnet-0d556cf6685f9d2cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "15.9.97.128/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d556cf6685f9d2cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "708113109960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kofra-private-subnet"
            },
            "tags_all": {
              "Name": "kofra-private-subnet"
            },
            "vpc_id": "vpc-0f2cdbc6a33637627"
          },
          "dependencies": [
            "data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:708113109960:subnet/subnet-06eb18d4d4e37bf62",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "15.9.97.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06eb18d4d4e37bf62",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "708113109960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kofra-public-subnet"
            },
            "tags_all": {
              "Name": "kofra-public-subnet"
            },
            "vpc_id": "vpc-0f2cdbc6a33637627"
          },
          "dependencies": [
            "data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_ssh_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:708113109960:security-group-rule/sgr-0a67b6f411e509ef7",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": -1,
            "id": "sgr-0a67b6f411e509ef7",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0aaaec94e5e636f40",
            "security_group_rule_id": "sgr-0a67b6f411e509ef7",
            "tags": null,
            "tags_all": {},
            "to_port": -1
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web_server_security_group",
            "data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:708113109960:security-group-rule/sgr-0eaac877f38ece5af",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0eaac877f38ece5af",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0aaaec94e5e636f40",
            "security_group_rule_id": "sgr-0eaac877f38ece5af",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web_server_security_group",
            "data.aws_vpc.this"
          ]
        }
      ]
    }
  ]
}